@@ -6,19 +6,22 @@
 	<A HREF="http://blargle.com/">blargle</A>
 	<A HREF="http://a.cpan.org/">CPAN A</A>
 	<A HREF="http://b.cpan.org/">CPAN B</A>
+	<FRAME SRC="foo.html">
+	<FRAME SRC="bar.html">
 	<A HREF="http://c.cpan.org/" NAME="bongo">CPAN C</A>
 	<A HREF="http://d.cpan.org/">CPAN D</A>
 
 	<A HREF="http://www.msnbc.com/">MSNBC</A>
+	<FRAME SRC="http://www.oreilly.com/" NAME="wongo">
 	<A HREF="http://www.cnn.com/">CNN</A>
-	<A HREF="http://www.bbc.co.uk/">BBC</A>
+	<A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
 	<A HREF="http://www.msnbc.com/">News</A>
 	<A HREF="http://www.cnn.com/" NAME="Fred">News</A>
 	<A HREF="http://www.bbc.co.uk/">News</A>
 
 	<MAP NAME="SOME_MAP">
 	    <AREA HREF="http://www.msnbc.com/area" COORDS="1,2,3,4"></AREA>
-	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8">
+	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8" NAME="Marty">
 	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13" />
 	</MAP>
 	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
